add pager style

--- a/test/index.html
+++ b/test/index.html
@@ -22,7 +22,7 @@
             <div class="test stage">
                 <h3>pager</h3>
                 <div class="pagerc">
-                    <c-pager :maxentries="maxentries" :items-per-page="items_per_page" 
+                    <c-pager :total="total" :pgeSize="pageSize" 
                     :num-display-entries="num_display_entries" :num-edge-entries="num_edge_entries" 
                     :cur-page="cur_page"></c-pager>
                 </div>  
