--- a/test/index.html
+++ b/test/index.html
@@ -7,7 +7,7 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta content="black" name="apple-mobile-web-app-status-bar-style">
         <meta content="telephone=no" name="format-detection">
-        <link rel="stylesheet" href="../dist/vue-pager.css" />
+        <link rel="stylesheet" href="../dist/vue-pageman.css" />
         <style>
             .stage{
                 text-align: center;
@@ -29,7 +29,7 @@
             </div>
         </div>
         <script src="../node_modules/vue/dist/vue.js"></script>
-        <script src="../dist/vue-pager.js"></script>
+        <script src="../dist/vue-pageman.js"></script>
         <script type="text/javascript" src="./dist/test.js"></script>
     </body>
 </html>
